:sparkles: add transactional annotation